Deny invitations and document invitations routes using rswag
